tests/purs/failing/UnusableTypeClassMethodConflictingIdent.out
Error found:
in module [33mMain[0m
at tests/purs/failing/UnusableTypeClassMethodConflictingIdent.purs:4:1 - 6:19 (line 4, column 1 - line 6, column 19)

  The declaration [33mc[0m contains arguments that couldn't be determined.
  These arguments are: { a }

in type class declaration for [33mC[0m

See https://github.com/purescript/documentation/blob/master/errors/UnusableDeclaration.md for more information,
or to contribute content related to this error.

